[package]
name = "replaytables"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "replaytables"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
hashbrown = { version = "0.14.3", features = ["serde"] }
ndarray = { version = "0.15.6", features = ["serde"] }
numpy = "0.20.0"
pyo3 = { version = "0.21.0", features = ["extension-module", "generate-import-lib"] }
serde = { version = "1.0.197", features = ["derive"] }
